--- a/AgoyFFMpegRecorder/NLog.config
+++ b/AgoyFFMpegRecorder/NLog.config
@@ -3,7 +3,7 @@
   <targets>
     <target name="console" xsi:type="Console"
      layout="${date:format=MM-dd HH\:mm\:ss.fff}|${level} --> ${message}" />
-    <target name="file" xsi:type="File" fileName="${basedir}/logs/Server.log"
+    <target name="file" xsi:type="File" fileName="${basedir}/logs/AgoyRec.log"
      layout="${date:format=MM-dd HH\:mm\:ss.fff}|${level} --> ${message}" />
   </targets>
 
